--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,16 +18,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@700;900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./style.css">
-  
+
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 
 <body>
 
   <div class="header-container | text-neutral-400">
-    <header class="gap">
+    <header>
+      <picture class="header-img-wrapper">
+        <source srcset="./images/desktop/image-header.jpg" media="(min-width: 40em)">
+        <img class="header-img" src="./images/mobile/image-header.jpg" alt="">
+      </picture>
       <div class="header-wrapper">
-        <img src="./images/logo.svg" alt="Sunnyside logo">
+        <img class="page-logo" src="./images/logo.svg" alt="Sunnyside logo">
         <div class="header-nav">
           <button class="mobile-nav" aria-controls="primary-nav" aria-expanded="false">
             <span class="sr-only">Menu</span>
@@ -36,27 +42,29 @@
               <li><a href="#">Services</a></li>
               <li><a href="#">Projects</a></li>
             </ul>
-            <button class="btn | uppercase ff-secondary text-secondary-700 fs-400 bg-neutral-400 fw-bold">Contact</button>
+            <button
+              class="btn | uppercase ff-secondary text-secondary-700 fs-400 bg-neutral-400 fw-bold">Contact</button>
           </nav>
         </div>
       </div>
+      <h1 class="header-title | uppercase ff-secondary fs-800 fw-bolder">we are creatives</h1>
     </header>
-    <h1 class="header-title | uppercase ff-secondary fs-800 fw-bolder">we are creatives</h1>
   </div>
 
   <main>
     <div class="grid-container">
       <div class="subgrid">
-        <div class="subgrid-info | gap">
+        <div class="subgrid-info big-special | reveal">
           <h2 class="ff-secondary text-secondary-700 fs-700 fw-bold">Transform your brand</h2>
-          <p class="fs-400 text-secondary-500">We are a full-service creative agency specializing in helping brands grow fast. 
-          Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          <p class="fs-400 text-secondary-500">We are a full-service creative agency specializing in helping brands grow
+            fast.
+            Engage your clients through compelling visuals that do most of the marketing for you.</p>
           <a href="#" class="subgrid-link | ff-secondary uppercase">Learn more</a>
         </div>
         <div class="subgrid-image first-img">
           <picture>
             <source srcset="./images/desktop/image-transform.jpg" media="(min-width: 40em)">
-            <img src="./images/mobile/image-transform.jpg" alt="egg image">
+            <img class="picture-img" src="./images/mobile/image-transform.jpg" alt="egg image">
           </picture>
         </div>
       </div>
@@ -64,47 +72,65 @@
         <div class="subgrid-image">
           <picture>
             <source srcset="./images/desktop/image-stand-out.jpg" media="(min-width: 40em)">
-            <img src="./images/mobile/image-stand-out.jpg" alt="cocktail image">
+            <img class="picture-img" src="./images/mobile/image-stand-out.jpg" alt="cocktail image">
           </picture>
         </div>
-        <div class="subgrid-info | gap">
+        <div class="subgrid-info big-special | reveal-right">
           <h2 class="ff-secondary text-secondary-700 fs-700 fw-bold">Stand out to the right audience</h2>
-          <p class="fs-400 text-secondary-500">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
+          <p class="fs-400 text-secondary-500">Using a collaborative formula of designers, researchers, photographers,
+            videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
           <a href="#" class="subgrid-link inset-link | ff-secondary uppercase">Learn more</a>
         </div>
       </div>
       <div class="subgrid">
-        <div class="subgrid-info first-background | gap">
-          <h3 class="text-primary-500 fs-600 fw-bold ff-secondary">Graphic design</h3>
-          <p class="fs-400 text-primary-500">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-          </p>
+        <div class="subgrid-info-overlap">
+          <picture>
+            <source srcset="./images/desktop/image-graphic-design.jpg" media="(min-width: 40em)">
+            <img class="subgrid-info-img" src="./images/mobile/image-graphic-design.jpg" alt="image of cherries">
+          </picture>
+          <div class="subgrid-info-text">
+            <h3 class="text-primary-500 fs-600 fw-bold ff-secondary">Graphic design</h3>
+            <p class="fs-400 text-primary-500">Great design makes you memorable. We deliver artwork that underscores
+              your brand message.</p>
+          </div>
         </div>
-        <div class="subgrid-info second-background | gap">
-          <h3 class="text-primary-600 fs-600 fw-bold ff-secondary">Photography</h3>
-          <p class="fs-400 text-primary-600">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+        <div class="subgrid-info-overlap">
+          <picture>
+            <source srcset="./images/desktop/image-photography.jpg" media="(min-width: 40em)">
+            <img class="subgrid-info-img" src="./images/mobile/image-photography.jpg" alt="image of orange">
+          </picture>
+          <div class="subgrid-info-text">
+            <h3 class="text-primary-600 fs-600 fw-bold ff-secondary">Photography</h3>
+            <p class="fs-400 text-primary-600">Increase your credibility by getting the most stunning, high-quality
+              photos
+              that improve your business image.</p>
+          </div>
         </div>
       </div>
     </div>
   </main>
 
-  <section class="client-testimonials | bg-neutral-400 text-secondary-600 gap">
+  <section class="client-testimonials | bg-neutral-400 text-secondary-600">
     <h4 class="text-secondary-500 uppercase fw-bold fs-500">Client testimonials</h4>
     <div class="testimonials-grid">
       <div class="testimonials-flex">
         <img class="client-logo" src="./images/image-emily.jpg" alt="client Emily">
-        <p class="text-secondary-600">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p class="text-secondary-600">We put our trust in Sunnyside and they delivered, making sure our needs were met
+          and deadlines were always hit.</p>
         <p class="ff-secondary fs-500 text-secondary-700">Emily R.</p>
         <p class="text-secondary-400 fs-400">Marketing Director</p>
       </div>
       <div class="testimonials-flex">
         <img class="client-logo" src="./images/image-thomas.jpg" alt="client Thomas">
-        <p class="text-secondary-600">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p class="text-secondary-600">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success
+          made it a satisfying and enjoyable experience.</p>
         <p class="ff-secondary fs-500 text-secondary-700">Thomas S.</p>
         <p class="text-secondary-400 fs-400">Chief Operating Officer</p>
       </div>
       <div class="testimonials-flex">
         <img class="client-logo" src="./images/image-jennie.jpg" alt="client Jennie">
-        <p class="text-secondary-600">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p class="text-secondary-600">Incredible end result! Our sales increased over 400% when we worked with
+          Sunnyside. Highly recommended!</p>
         <p class="ff-secondary fs-500 text-secondary-700">Jennie F.</p>
         <p class="text-secondary-400 fs-400">Business Owner</p>
       </div>
@@ -149,7 +175,7 @@
     </div>
   </footer>
 
-<script src="./main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
